--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,16 @@
     border-bottom: 1px solid #999;
 }
 .search label {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 16px;
     margin-right: 10px;
+    padding-top: 3.5px;
 }
 .search input {
     margin-right: 10px;
     border-radius: 5px;
     padding: 4px;
+    cursor: text;
 }
 .search button {
     background: none;
