--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,45 @@
     align-items: right;
     padding: 30px 0;
 }
-#header h1 {
+#header h1 a {
     font-size: 23px;
     margin-right: 40px;
+    font-weight: 600;
+}
+#header h1 .intro {
+    font-size: 12px;
+    font-weight: 400;
+}
+#header .dropBox {
+    position: absolute;
+    top: 18px;
+    left: 20px;
+}
+#header .dropBox .naBtn {
+    background: #fff;
+    border-radius: 5px;
+    padding: 1px;
+    transition: 0.3s;
+    cursor: pointer;
+    margin-bottom: 3px;
+	padding-right: 116px;
+	font-weight: 600;
+}
+#header .dropBox .naBtn:hover {
+    background: #333;
+    color: #fff;
+}
+#header .dropBox .dropDown {}
+#header .dropBox .dropDown button {
+    background: #fff;
+    border-radius: 5px;
+    padding: 1px;
+    transition: 0.3s;
+    cursor: pointer;
+}
+#header .dropBox .dropDown button:hover {
+    background: #333;
+    color: #fff;
 }
 
 /* main - search part */
@@ -30,7 +66,7 @@
     font-weight: 500;
     font-size: 16px;
     margin-right: 10px;
-    padding-top: 3.5px;
+    padding-top: 6.5px;
 }
 .search input {
     margin-right: 10px;
@@ -90,7 +126,6 @@
     bottom: 7px; 
     right: 20px;
 }
-
 
 /* footer */
 #footer {
